--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "autoprefixer": "^8.6.3",
     "axios": "^0.18.0",
     "collect.js": "^4.0.19",
+    "dayjs": "^1.7.2",
     "dotenv": "^6.0.0",
     "glob-all": "^3.1.0",
     "highlight.js": "^9.12.0",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
     "marked": "^0.4.0",
-    "moment": "^2.22.2",
     "nuxt": "^1.0.0",
     "purgecss-webpack-plugin": "^1.2.0",
     "tailwindcss": "^0.5.3"
