--- a/package.json
+++ b/package.json
@@ -1,38 +1,31 @@
 {
-  "name": "nuxt-cockpit-static-blog",
+  "name": "new-blog",
   "version": "1.0.0",
-  "description": "A static blog built with Nuxt.js and Cockpit headless CMS.",
-  "author": "will Browning - willbrowning.me",
+  "description": "My legendary Nuxt.js project",
+  "author": "will",
   "private": true,
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint"
+    "generate": "nuxt generate"
   },
   "dependencies": {
+    "cross-env": "^5.2.0",
+    "nuxt": "^2.0.0",
+    "@nuxtjs/axios": "^5.0.0"
+  },
+  "devDependencies": {
     "@nuxtjs/sitemap": "^0.1.1",
-    "autoprefixer": "^8.6.4",
-    "axios": "^0.18.0",
-    "collect.js": "^4.0.27",
+    "autoprefixer": "^9.3.1",
+    "collect.js": "^4.0.28",
     "dayjs": "^1.7.7",
     "dotenv": "^6.1.0",
     "glob-all": "^3.1.0",
-    "highlight.js": "^9.13.0",
-    "less": "^3.0.4",
-    "less-loader": "^4.1.0",
-    "marked": "^0.4.0",
-    "nuxt": "^2.2.0",
+    "highlight.js": "^9.13.1",
+    "marked": "^0.5.1",
+    "nodemon": "^1.11.0",
     "purgecss-webpack-plugin": "^1.3.1",
-    "tailwindcss": "^0.6.6"
-  },
-  "devDependencies": {
-    "babel-eslint": "^8.2.1",
-    "eslint": "^5.0.1",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-vue": "^4.0.0"
+    "tailwindcss": "^0.7.2"
   }
 }
