--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.0.0",
     "cross-env": "^5.2.0",
-    "nuxt": "^2.0.0",
-    "@nuxtjs/axios": "^5.0.0"
+    "nuxt": "^2.3.4"
   },
   "devDependencies": {
     "@nuxtjs/sitemap": "^0.1.1",
@@ -23,9 +23,9 @@
     "dotenv": "^6.1.0",
     "glob-all": "^3.1.0",
     "highlight.js": "^9.13.1",
-    "marked": "^0.5.1",
-    "nodemon": "^1.11.0",
-    "purgecss-webpack-plugin": "^1.3.1",
+    "marked": "^0.5.2",
+    "nodemon": "^1.18.7",
+    "purgecss-webpack-plugin": "^1.4.0",
     "tailwindcss": "^0.7.2"
   }
 }
